autocompletion-popover: Fix misplacement on small window widths
Currently the autocompletion-popover has a margin-left in its stylesheet
which does look misplaced if the window has a small width.

To fix this remove the left margin of the autocompletion-popover once the
transition between the 'narrow' and 'non-narrow' mode happens.

Fixes https://gitlab.gnome.org/GNOME/fractal/issues/516

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -214,6 +214,10 @@ row .timestamp {
   margin-left: 150px;
 }
 
+.autocomplete.narrow {
+  margin-left: 0;
+}
+
 .autocomplete,
 .autocomplete list,
 .autocomplete row:not(:hover):not(:selected) {
